# POO2022-1WDCHT

./: README.md
Trabajo compañeros modificado polimorfismo/: CMakeLists.txt  Circulo.cpp  Circulo.h  Cuadrado.cpp  Cuadrado.h  FiguraGeometrica.cpp  FiguraGeometrica.h  Rectangulo.cpp  Rectangulo.h  TrianguloRectangulo.cpp  TrianguloRectangulo.h  View.cpp  View.h  main.cpp
Trabajo figurasGeometricas Willian-Sebastián/: CMakeLists.txt  Circulo.cpp  Circulo.h  Cuadrado.cpp  Cuadrado.h  FiguraGeometrica.cpp  FiguraGeometrica.h  Main.cpp  Rectangulo.cpp  Rectangulo.h  Sistema.cpp  Sistema.h  main.cpp  readme.md
